--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ng-gc-focus-select",
+  "name": "ng-gc-focus-select-directive",
   "version": "0.1.0",
-  "main": "ng-gc-focus-select.js",
+  "main": "ng-gc-focus-select-directive.js",
   "dependencies": {
     "bower-angular": "git@github.com:angular/bower-angular.git#v1.2.0-rc.2"
   },
